# AOReloaded

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/graphics/: shadows_lighting.md  textures.md
src/: dllmain.cpp
src/ao/: CLAUDE.md  dvalue_dump.cpp  dvalue_dump.h  game_api.cpp  game_api.h  types.h
src/core/: laa_patch.cpp  laa_patch.h  logging.cpp  logging.h  settings.cpp  settings.h
src/hooks/: camera_hook.cpp  camera_hook.h  gfx_debugger_hook.cpp  gfx_debugger_hook.h  hook_engine.cpp  hook_engine.h  input_handler.cpp  input_handler.h  numpad_fix.cpp  numpad_fix.h  timer_bar_drag.cpp  timer_bar_drag.h
src/proxy/: version_proxy.cpp  version_proxy.def  version_proxy.h
